# libSps

./: .clang-format  .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  Manual.md  README.md  TODO  _test.py  cmake_command.txt  count_size.py  count_size.sh  format.sh  kdtree.cpp  kdtree.h  setup.py  slurm_count_size-681890.out  slurm_count_size-682012.out  test.py  test_seperated_integration.py  test_sparse.py
.github/workflows/: python-publish.yml  test-cibuildwheel.yml  test_build.yml  test_import.yml
benchmakring/: benchmark.ipynb
cmake/: FindSphinx.cmake  cmake_command.txt  libspsConfig.cmake.in
conda/: build.sh  conda_build_config.yaml  conda_install.sh  create_dev_env.sh  dev_env.yml  meta.yaml  setup.py
conda_env/: create_env.sh  libSps.yml
contrib/clangformat-cmake/: CMakeLists.txt
docs/: .buildinfo  AbstractIndex.html  CachedTypeDef.html  Cpp.html  CppIndex.html  DiscVecGenerator.html  DiskTypeDef.html  DiskVecGenerator.html  InMemTypeDef.html  IntersectionType.html  Manual.html  Python.html  RamVectorSorter.html  Readme.html  SimpleValVector.html  SimpleVector.html  StdOutProgressStream.html  TypeDefs.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_generate/: libSps.AbstractIndex.html  libSps.CachedDependantDimIntervalsPrefixSum_2D.html  libSps.CachedDependantDimIntervalsPrefixSum_3D.html  libSps.CachedDependantDimPointsPrefixSum_2D.html  libSps.CachedDependantDimPointsPrefixSum_3D.html  libSps.CachedDependantDimRectanglesPrefixSum_2D.html  libSps.CachedDependantDimRectanglesPrefixSum_3D.html  libSps.CachedIntervalsPrefixSum_2D.html  libSps.CachedIntervalsPrefixSum_3D.html  libSps.CachedPointsPrefixSum_2D.html  libSps.CachedPointsPrefixSum_3D.html  libSps.CachedRectanglesPrefixSum_2D.html  libSps.CachedRectanglesPrefixSum_3D.html  libSps.CachedSimpleVector_2D.html  libSps.CachedSimpleVector_3D.html  libSps.CachedUniformOverlayGridIntervalsPrefixSum_2D.html  libSps.CachedUniformOverlayGridIntervalsPrefixSum_3D.html  libSps.CachedUniformOverlayGridRectanglesPrefixSum_2D.html  libSps.CachedUniformOverlayGridRectanglesPrefixSum_3D.html  libSps.DiskDependantDimIntervalsPrefixSum_2D.html  libSps.DiskDependantDimIntervalsPrefixSum_3D.html  libSps.DiskDependantDimPointsPrefixSum_2D.html  libSps.DiskDependantDimPointsPrefixSum_3D.html  libSps.DiskDependantDimRectanglesPrefixSum_2D.html  libSps.DiskDependantDimRectanglesPrefixSum_3D.html  libSps.DiskIntervalsPrefixSum_2D.html  libSps.DiskIntervalsPrefixSum_3D.html  libSps.DiskPointsPrefixSum_2D.html  libSps.DiskPointsPrefixSum_3D.html  libSps.DiskRectanglesPrefixSum_2D.html  libSps.DiskRectanglesPrefixSum_3D.html  libSps.DiskSimpleVector_2D.html  libSps.DiskSimpleVector_3D.html  libSps.DiskUniformOverlayGridIntervalsPrefixSum_2D.html  libSps.DiskUniformOverlayGridIntervalsPrefixSum_3D.html  libSps.DiskUniformOverlayGridRectanglesPrefixSum_2D.html  libSps.DiskUniformOverlayGridRectanglesPrefixSum_3D.html  libSps.IntersectionType.html  libSps.RamDependantDimIntervalsPrefixSum_2D.html  libSps.RamDependantDimIntervalsPrefixSum_3D.html  (+17 more)
docs/_sources/: AbstractIndex.rst.txt  Cpp.rst.txt  CppIndex.rst.txt  DiscVecGenerator.rst.txt  DiskTypeDef.rst.txt  DiskVecGenerator.rst.txt  InMemTypeDef.rst.txt  IntersectionType.rst.txt  RamVectorSorter.rst.txt  SimpleVector.rst.txt
docs/_sources/_generate/: libSps.AbstractIndex.rst.txt  libSps.CachedDependantDimIntervalsPrefixSum_2D.rst.txt  libSps.CachedDependantDimIntervalsPrefixSum_3D.rst.txt  libSps.CachedDependantDimPointsPrefixSum_2D.rst.txt  libSps.CachedDependantDimPointsPrefixSum_3D.rst.txt  libSps.CachedDependantDimRectanglesPrefixSum_2D.rst.txt  libSps.CachedDependantDimRectanglesPrefixSum_3D.rst.txt  libSps.CachedIntervalsPrefixSum_2D.rst.txt  libSps.CachedIntervalsPrefixSum_3D.rst.txt  libSps.CachedPointsPrefixSum_2D.rst.txt  libSps.CachedPointsPrefixSum_3D.rst.txt  libSps.CachedRectanglesPrefixSum_2D.rst.txt  libSps.CachedRectanglesPrefixSum_3D.rst.txt  libSps.CachedSimpleVector_2D.rst.txt  libSps.CachedSimpleVector_3D.rst.txt  libSps.CachedUniformOverlayGridIntervalsPrefixSum_2D.rst.txt  libSps.CachedUniformOverlayGridIntervalsPrefixSum_3D.rst.txt  libSps.CachedUniformOverlayGridRectanglesPrefixSum_2D.rst.txt  libSps.CachedUniformOverlayGridRectanglesPrefixSum_3D.rst.txt  libSps.DiskDependantDimIntervalsPrefixSum_2D.rst.txt  libSps.DiskDependantDimIntervalsPrefixSum_3D.rst.txt  libSps.DiskDependantDimPointsPrefixSum_2D.rst.txt  libSps.DiskDependantDimPointsPrefixSum_3D.rst.txt  libSps.DiskDependantDimRectanglesPrefixSum_2D.rst.txt  libSps.DiskIntervalsPrefixSum_2D.rst.txt  (+32 more)
docs/py/: .buildinfo  Python.html  genindex.html  objects.inv  py-modindex.html  searchindex.js
docs_conf/: CachedTypeDef.rst  Cpp.rst  Python.rst  SimpleValVector.rst  StdOutProgressStream.rst  TypeDefs.rst  conf.py  dev_env_linux.yml  doxygen.config  doxygen.config.bak  index.rst  requirements.txt
docs_conf/_templates/: conf.py
inc/bps/: default.h  desc.h  overlay_entries.h  overlay_meta.h  overlays.h  point.h  points.h  thread_pool.h  tree.h  type_defs.h
inc/cstree/: cont_sum.h  data_point.h  default.h  realtive_prefix_sum_array.h  subtree_info.h  tree.h  type_defs.h
inc/kdpstree/: dataset.h  default.h  desc.h  main.h  nd_grid.h  overlay.h  overlay_entries.h  overlay_kd_tree.h  overlay_meta.h  point.h  points.h  psarray.h  sparse_coordinate.h  thread_pool.h  tree.h  type_defs.h  util.h
inc/sps/: abstract_index.h  build_time.h.backup  build_time.h.in  corners.h  dataset.h  default.h  desc.h  index.h  main.h  nd_grid.h  operator_array.h  overlay.h  point.h  points.h  simpleVector.h  simple_vector.h  sparse_coordinate.h  thread_pool.h  type_defs.h  util.h  version.h.backup  version.h.in
notebooks/: benchmark.ipynb
src/: benchmark.cpp  conf_build_time.h.in.py  conf_build_time.h.in.sh  conf_version.h.in.py  conf_version.h.in.sh  main.cpp  plot_size_prediction.py  sps.py  tree.cpp
test/: benchmark.py  benchmark.sh  perf_benchmark.py  predict_lookup_table_size.py  predict_num_draws.py  size_optimization.py  test.py  testing.py
(+4 files in other folders)
